1999-09-11  Raph Levien  <raph@gimp.org>

	* art_affine.c (art_affine_to_string): Tightened the predicate for
	matching rotate-only affines, which was too weak. Thanks to lewing
	for spotting it!

1999-09-01  Raph Levien  <raph@gimp.org>

	* art_affine.c, art_alphagamma.c, art_bpath.c, art_gray_svp.c,
	art_misc.c, art_pixbuf.c, art_rect.c, art_rect_svp.c,
	art_rect_uta.c, art_rgb.c, art_rgb_affine.c,
	art_rgb_bitmap_affine.c: Updates to api doc headers.

1999-08-24  Raph Levien  <raph@gimp.org>

	* art_affine.c, art_alphagamma.c, art_alphagamma.h, art_bpath.c,
	art_bpath.h, art_gray_svp.c, art_misc.c, art_pixbuf.c,
	art_pixbuf.h, art_point.h, art_rect.c, art_rect.h: Added api
	documentation headers.

	* testart.c: Added "dash" test, for testing the vpath_dash
	functions.

	* art_rgb_pixbuf_affine.h: Fixed the #ifdef for conditional
	inclusion. Thanks to Kristian Hogsberg Kristensen for spotting
	the bug.

1999-08-24  Raph Levien  <raph@gimp.org>

	* art_svp_render_aa.c (art_svp_render_aa): Added some tests to
	avoid NaN for infinite slopes, which were causing problems on
	Alphas. Closes bug #1966.

1999-08-20  Federico Mena Quintero  <federico@redhat.com>

	* configure.in: Fixed library's libtool version number.

1999-08-03  Larry Ewing  <lewing@gimp.org>

	* art_vpath_dash.c (art_vpath_dash): fix a bug/typo that was causing
	certain paths to loop infinitely.

1999-07-28  Raph Levien  <raph@gimp.org>

	* art_vpath_dash.[ch]: Added a function to add a dash style
	to vpaths. It is tested, but has a couple of rough edges (see
	code for details).

	* testart.c: added tests for the new vpath_dash functionality.

	* Makefile.am: added art_vpath_dash.[ch] files.

1999-07-26  Raph Levien  <raph@gimp.org>

	* art_rgb.c (art_rgb_fill_run): fixed incorrect test for
	big-endianness. Thanks to Michael Zucchi for spotting it.

Fri Jul 16 23:42:59 1999  Tim Janik  <timj@gtk.org>

	* art_affine.c (art_affine_flip): flip translation matrixes as well, by